test/y_error_08.j
class UWU
{
	Void main()
	{
		Int a;
		a.foo = 69;
	}
}
